# axtel

./: Cargo.toml  README.md  index.html  req.sh
src/: bin.rs  json.rs  lib.rs  main.rs  middleware.rs  request.rs  response.rs
src/http/: request.rs  response.rs
src/router/: handler.rs  method_router.rs  mod.rs
src/server/: mod.rs  serve.rs
